@@ -4,6 +4,9 @@ Griffith ChangeLog
 ------------------
 (c) 2005-2008  Vasco Nunes, Piotr Ożarowski
 
+2008-04-13  Michael Jahn
+	* updated OFDb plugin
+
 2008-04-01  Michael Jahn
 	* fixed html export if sorted by collection, media, video codec or volume
 
